UX-1010 fix alignment of user selector pills

--- a/_scss/components/custom-selector.scss
+++ b/_scss/components/custom-selector.scss
@@ -113,3 +113,9 @@
 .main-filter-bar .form-group .custom-selector .contact-selector > li > input[type="text"] {
   height: 28px;
 }
+
+.user-activity-search-status {
+  line-height: 18px;
+  height: 34px;
+  padding: 2px 0;
+}
